tests/should_fail/incomplete_arrow.jou
def main() - int:  # Error: '-' must be immediately followed by '>' to make up the '->' operator
    return '\0'
